feat: api endpoints to fetch where is iss api, data collecting routines
